--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body{
 }
 
 #my-canvas{
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     background: #000;
     border: 1px solid #fff;
 }
