--- a/style.css
+++ b/style.css
@@ -11,6 +11,6 @@ body{
 #my-canvas{
     width: 100%;
     height: 100%;
-    background: red;
+    background: black;
     border: 1px solid #fff;
 }
